fix small screen flex wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
-header {display: flex; flex-wrap: wrap; background-color:  lightgray; 
-    justify-content: space-between; border-bottom: solid; border-bottom-color: rgba(255, 92, 80, 0.912); border-bottom-width: 3px;}
+header {display: flex; /*flex-wrap: wrap;*/ background-color:  lightgray; 
+    justify-content: space-between; border-bottom: solid; border-bottom-color: rgba(255, 92, 80, 0.912); border-bottom-width: 3px; align-items: center;}
 
 h1 {display: flex; margin-left: 0; border: solid; border-color: #fff; border-width: 3px; 
-    padding: 1%; font-family: cursive; font-size: 40px; color: #fff; background-color: grey; }
+    padding: 1%; font-family: cursive; font-size: 300%; color: white; background-color: grey; text-align: center;}
 
 nav { /*border: solid; border-color: red; border-width: 3px;*/ padding-top: 40px; padding-right: 25px; padding-left: 25px; min-width: 35%;}
 
@@ -26,19 +26,25 @@ banner {display: flex;
 
 img {width: 100%;}
 
-.sarah-pic {width: 50%; } 
 
-/*#sarah-pic {width: 25%; }*/ 
 
 .about-me {display: flex; flex-wrap: wrap; background-color:  #fff; 
     justify-content: center; border: solid; border-color: white; border-width: 15px;}
 
 .heading {display: inline-flex; margin-right: 2px; border-right: solid; border-right-color: grey; border-width: 3px; padding-right: 1%; width: 15%; justify-content: right; padding-top: 5%;}    
 
-.bio { /*border: solid; border-color: red; border-width: 3px;*/ display: flex; padding-top: 40px; padding-right: 25px; padding-left: 25px; width: 75%;}
+.bio { /*border: solid; border-color: red; border-width: 3px;*/ display: flex; padding-top: 40px; padding-right: 25px; padding-left: 25px; width: 75%; justify-content: space-between;}
 /*.contact-list {float: right; }*/
 
-.bio-para {display: inline-flexbox;}
+#sarah-pic {width: 25%; min-width: 300px;}
+
+/*p {max-width: 50%}*/
+
+/*.bio-para {display: inline-flexbox;}*/
+
+/*.bio-para {display: flex; flex-direction: column;}*/
+
+/*.bio-para {padding: 10px; width: 50%; flex: 500px 0; border: solid; border-width: 2px; border-color: lightgrey; margin: 10px; }*/
 
 .work {display: flex; flex-wrap: wrap; background-color:  #fff; 
     justify-content: center; border: solid; border-color: white; border-width: 15px;}
@@ -57,5 +63,12 @@ img {width: 100%;}
 
 .contact-items li {display: inline-block; padding: 5%; text-decoration: underline; justify-items: right;}
 
+/*#img1 {width: ;}*/
+
 /*footer {display: flex; flex-wrap: wrap; background-color:  lightgray; 
     justify-content: space-between; /*border: solid; border-color: black; border-width: 3px;*/
+
+    @media screen and (max-width: 768px) {
+        header, nav, .bio {
+          flex-direction: column;
+        }    
